--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,147 +1,56 @@
-/* login page */
-.base-container {
-    scroll-snap-type: y mandatory;
+
+/*--Description page--*/
+
+.description{
+    background-color: #EFF3F4;
 }
 
-.loginbg {
-    background-color: #808080;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 550px;
+.return-deescription{
+    margin-left: 8px;
+    height: 18.88px;
+    width: auto;
 }
 
-.login {
-    width: 70%;
-    height: 80%;
-    background-color: rgb(255 255 255 / 18%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 5%;
+.arrow-left-deescription a{
+    color:#5e5e5e!important;
 }
 
-.login-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login img {
-    width: 90px;
-    margin-bottom: 20px;
-}
-
-.login-username {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 120%;
-}
-
-.login-name {
-    margin-bottom: 20px;
-}
-
-.forgot {
-    margin-bottom: 20px;
-}
-
-.login-name input {
-    background-color: #80808000;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-}
-
-.login-password input {
-    background-color: #80808000;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
-}
-
-.login-name label {
-    color: white;
-}
-
-.login-password label {
-    color: white;
-}
-
-.forgot a {
-    color: white;
-}
-
-.loginbt input {
-    background-color: rgb(124 124 124 / 0%);
-    color: white;
-    border-radius: 10px;
-    font-weight: bold;
-    width: 150px;
-    height: 50px;
-}
-/*--login page--*/
-
-
-/*--home page--*/
-
-#calendar .fc-scrollgrid-sync-table a {
-    font-size: 18px;
-    color: black;
-    text-decoration: none;
-  }
-
-#calendar .fc-col-header-cell-cushion {
-    color: black;
-    text-decoration: none;
-  }
-
-#calendar {
-    margin: 13px;
-}
-
-.navbar-brand .fas ,.fa-home::before{
-  font-size: 25px;
-  position: relative;
-  top: 1px;
-}
-
-.navbar-brand {
+.return-deescription span{
+    color: #5e5e5e!important;
+    font-family: IBM Plex Sans!important;
+    font-size: 20px;
     margin-left: 16px;
 }
 
-.container-fluid .navbar-toggler {
-    border: 0;
-}
-
-#calendar .fc-toolbar-title {
+.title-description span{
+    width: 375px;
     font-weight: bold;
-    margin: 5px;
-  
-}
-
-#calendar .fc-button {
-    padding: 2px;
-}
-
-.media {
     display: flex;
-    margin: 13px;
-    background-color: linen;
-    height: 90px;
+    justify-content: center!important;
+    font-family: IBM Plex Sans!important;
+    border-bottom: groove #5e5e5e!important;
 }
 
-.media-body {
-    margin: 20px;
-    
+.description-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
 }
 
-.fa-creative-commons-by::before {
-    font-size: 50px;
-    padding-left: 13px;
+.assign-to{
+    width: 375px!important;
+    height: 100px!important;   
+}
+
+.assign-to a .fa-user-circle::before {
+    font-size: 80px!important;
+    color:#5e5e5e;
+}
+
+.assign-to a .fa-user-plus::before {
+    font-size: 50px!important;
+    color:#5e5e5e;
+    opacity: 0.24;
+    margin-left: 10px;   
 }
 
 .btn-primary {
