--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 /* login page */
+
 .base-container {
     scroll-snap-type: y mandatory;
 }
@@ -83,6 +84,8 @@
     width: 150px;
     height: 50px;
 }
+
+
 /*--login page--*/
 
 
@@ -92,21 +95,22 @@
     font-size: 18px;
     color: black;
     text-decoration: none;
-  }
+}
 
 #calendar .fc-col-header-cell-cushion {
     color: black;
     text-decoration: none;
-  }
+}
 
 #calendar {
     margin: 13px;
 }
 
-.navbar-brand .fas ,.fa-home::before{
-  font-size: 25px;
-  position: relative;
-  top: 1px;
+.navbar-brand .fas,
+.fa-home::before {
+    font-size: 25px;
+    position: relative;
+    top: 1px;
 }
 
 .navbar-brand {
@@ -120,7 +124,6 @@
 #calendar .fc-toolbar-title {
     font-weight: bold;
     margin: 5px;
-  
 }
 
 #calendar .fc-button {
@@ -136,7 +139,6 @@
 
 .media-body {
     margin: 20px;
-    
 }
 
 .fa-creative-commons-by::before {
@@ -149,5 +151,64 @@
     border-radius: 50px;
     position: relative;
     bottom: 10px;
-    background-color:tomato;
+    background-color: tomato;
 }
+
+.status {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 625px;
+    display: flex;
+    flex-direction: column;
+}
+
+.status h5 {
+    color: rgb(48, 48, 48);
+    margin: 20px;
+}
+
+.status h1 {
+    color: rgb(48, 48, 48);
+    margin-left: 20px;
+}
+
+.task {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.taskbg {
+    background-color: linen;
+    width: 90%;
+    height: 85px;
+    display: flex;
+    border-radius: 30px;
+    margin-bottom: 20px;
+}
+
+hr {
+    height: 5px;
+}
+
+.taskcheck {
+    flex: 1;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tasks {
+    flex: 3;
+    display: flex;
+    align-items: center;
+}
+
+input#checkbox {
+    width: 25%;
+    height: 25%;
+}
+
+.tasks p {}
