--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,26 +1,25 @@
 /* login page */
-.base-container {
-    scroll-snap-type: y mandatory;
-}
 
 .loginbg {
-    background-color: #808080;
+    background: linear-gradient(
+360deg
+, black, #7a7a7a);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 550px;
+    height: 100vh;
 }
 
 .login {
-    width: 70%;
-    height: 80%;
+    width: 80%;
+    height: 90%;
     background-color: rgb(255 255 255 / 18%);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 5%;
+    border-radius: 50px;
 }
 
 .login-img {
@@ -130,18 +129,39 @@
 .media {
     display: flex;
     margin: 13px;
-    background-color: linen;
-    height: 90px;
+    background: linear-gradient(
+90deg
+, #dadada, transparent);
+    height: 85px;
+    border-radius: 20px;
+}
+
+.media .h-status {
+    align-items: center;
+    display: flex;
+    margin: 0px 10px 0px 20px;
 }
 
 .media-body {
     margin: 20px;
-    
+    width: 100%;
 }
 
-.fa-creative-commons-by::before {
-    font-size: 50px;
-    padding-left: 13px;
+.assigned-to {
+    width: 200px;
+    height: 80px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+
+.fa-user-circle::before {
+    font-size: 23px;
+    padding-left: 5px;
+    height: 10px;
+    width: 50px;
+    opacity: 0.8;
 }
 
 .btn-primary {
@@ -149,5 +169,158 @@
     border-radius: 50px;
     position: relative;
     bottom: 10px;
-    background-color:tomato;
+    background-color: rgb(100, 110, 255);
+    border: 0;
+}
+
+.d-flex {
+    margin-top: 20px;
+}
+
+/*--Description page--*/
+
+.return-deescription{
+    margin: 10px;
+    height: 18.88px;
+    width: auto;
+}
+
+.arrow-left-deescription a{
+    color:#5e5e5e!important;
+}
+
+.return-deescription span{
+    color: #000000!important;
+    font-family: IBM Plex Sans!important;
+    font-size: 20px;
+    margin-left: 16px;
+}
+
+.title-description span{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-family: IBM Plex Sans;
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    border-bottom: groove #5e5e5e
+}
+
+.description-form {
+    padding: 10px;
+    font-family: IBM Plex Sans!important;
+}
+
+.description-control {
+    width: 100%;
+    height: 200px;
+}
+
+.assign-to{
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.assign-to h2 {
+    margin-bottom: 20px;
+}
+
+.assign-to a .fa-user-circle::before {
+    font-size: 30px;
+    color: #5e5e5e;
+    opacity: 0.8;
+}
+
+.assign-to a .fa-user-plus::before {
+    font-size: 15px;
+    color:#5e5e5e;
+    opacity: 0.5;
+    margin-left: 5px;   
+}
+
+.due-date {
+    margin: 0px 0px 20px 20px;
+    
+}
+
+/*---User page---*/
+
+.status {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 625px;
+    display: flex;
+    flex-direction: column;
+}
+
+.status h5 {
+    color: rgb(48, 48, 48);
+    margin: 20px;
+}
+
+.status a {
+    color:#5e5e5e;
+}
+
+.status span {
+    color: #000000;
+    font-family: IBM Plex Sans;
+    font-size: 20px;
+    margin-left: 16px;
+}
+
+.status h1 {
+    color: rgb(48, 48, 48);
+    margin-left: 20px;
+}
+
+.today {
+    margin: 10px;
+    width: auto;
+}
+
+.date {
+    margin: 20px 0px 10px 10px;
+}
+
+.task {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.taskbg {
+    background: linear-gradient(
+90deg
+, #dadada, transparent);
+    width: 90%;
+    height: 85px;
+    display: flex;
+    border-radius: 30px;
+    margin-bottom: 20px;
+}
+
+hr {
+    height: 5px;
+}
+
+.taskcheck {
+    flex: 1;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tasks {
+    flex: 3;
+    display: flex;
+    align-items: center;
+}
+
+input#checkbox {
+    width: 25%;
+    height: 25%;
 }
