--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,13 @@
 /* login page */
 
 .loginbg {
-    background: linear-gradient(
-360deg
-, black, #7a7a7a);
+    background: linear-gradient( 360deg, black, #7a7a7a);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
+    display: none;
 }
 
 .login {
@@ -50,7 +49,9 @@
 
 
 /*--Description page--*/
-
+.containerbg{
+    display: none;
+}
 .description {
     background-color: #EFF3F4;
 }
@@ -93,7 +94,6 @@
     top: 1px;
 }
 
-
 .return-deescription span {
     color: #5e5e5e!important;
     font-family: IBM Plex Sans!important;
@@ -119,9 +119,7 @@
 .media {
     display: flex;
     margin: 13px;
-    background: linear-gradient(
-90deg
-, #dadada, transparent);
+    background: linear-gradient( 90deg, #dadada, transparent);
     height: 85px;
     border-radius: 20px;
 }
@@ -145,7 +143,6 @@
     align-items: flex-end;
 }
 
-
 .fa-user-circle::before {
     font-size: 23px;
     padding-left: 5px;
@@ -167,26 +164,27 @@
     margin-top: 20px;
 }
 
+
 /*--Description page--*/
 
-.return-deescription{
+.return-deescription {
     margin: 10px;
     height: 18.88px;
     width: auto;
 }
 
-.arrow-left-deescription a{
-    color:#5e5e5e!important;
+.arrow-left-deescription a {
+    color: #5e5e5e!important;
 }
 
-.return-deescription span{
+.return-deescription span {
     color: #000000!important;
     font-family: IBM Plex Sans!important;
     font-size: 20px;
     margin-left: 16px;
 }
 
-.title-description span{
+.title-description span {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -207,9 +205,8 @@
     height: 200px;
 }
 
-.assign-to{
+.assign-to {
     margin: 0px 0px 20px 20px;
-    
 }
 
 .assign-to h2 {
@@ -224,18 +221,20 @@
 
 .assign-to a .fa-user-plus::before {
     font-size: 15px;
-    color:#5e5e5e;
+    color: #5e5e5e;
     opacity: 0.5;
-    margin-left: 5px;   
+    margin-left: 5px;
 }
 
 .due-date {
     margin: 0px 0px 20px 20px;
-    
 }
 
-/*---User page---*/
 
+/*---User page---*/
+.userpage{
+    display: none;
+}
 .status {
     background-color: rgb(255, 255, 255);
     width: 100%;
@@ -250,7 +249,7 @@
 }
 
 .status a {
-    color:#5e5e5e;
+    color: #5e5e5e;
 }
 
 .status span {
@@ -282,9 +281,7 @@
 }
 
 .taskbg {
-    background: linear-gradient(
-90deg
-, #dadada, transparent);
+    background: linear-gradient( 90deg, #dadada, transparent);
     width: 90%;
     height: 85px;
     display: flex;
@@ -313,4 +310,81 @@ hr {
 input#checkbox {
     width: 25%;
     height: 25%;
+}
+
+@media screen and (min-width: 768px) {
+    body{
+        height: 100vh;
+    }
+    main {
+        display: flex;
+        height: 100vh;
+    }
+    #home-page {
+        height: 100vh;
+        flex: 2;
+    }
+    .homepage{
+        height: 100vh;
+    }
+    .loginbg {
+        flex: 1;
+    }
+    .partthree nav {
+        display: none;
+    }
+    .login {
+        width: 70%;
+        height: 80%;
+        background-color: rgb(255 255 255 / 18%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 50px;
+    }
+    .login-username {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .login-name {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .login-password {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    #calendar{
+        height: auto;
+    }
+    .containerbg {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        
+    }
+    .userpage {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        
+    }
+    input {
+        width: 80%;
+    }
+    .partthree {
+        display: flex;
+        flex-direction: column;
+        flex: 2;
+    }
+    
+    .partthree{
+        height: 100%;
+    }
 }
