--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,11 @@
     display: none;
 }
 
+.loginbt {
+    border:rgb(255, 255, 255) ;
+    border: 10px
+}
+
 .login {
     width: 80%;
     height: 90%;
