--- a/Todo_page/todostyle.css
+++ b/Todo_page/todostyle.css
@@ -1,11 +1,41 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "montserrat", Arial, Helvetica, sans-serif ;
+    box-sizing: border-box;
+}
+
 .status {
-    background-color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgb(255, 225, 243), rgb(255, 255, 255));
     width: 100%;
-    height: 625px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
-
+.textb{
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid rgb(7, 7, 7);
+    background: none;
+    padding: 10px;
+    outline: none;
+    font-size: 18px;
+}
+h3{
+    margin: 10px 0;
+}
+.task{
+    width: 100%;
+    background: rgba(255,255,255,0.5);
+    padding: 16px;
+    margin: 8px 0;
+    overflow: hidden;
+}
+.task i{
+    float: right;
+    margin-left: 20px;
+    cursor: pointer;
+}
 .status h5 {
     color: rgb(48, 48, 48);
     margin: 20px;
@@ -36,39 +66,7 @@
     margin: 20px 0px 10px 10px;
 }
 
-.task {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
 
-.taskbg {
-    background: linear-gradient( 90deg, #dadada, transparent);
-    width: 90%;
-    height: 85px;
-    display: flex;
-    border-radius: 30px;
-    margin-bottom: 20px;
-}
-
-hr {
-    height: 5px;
-}
-
-.taskcheck {
-    flex: 1;
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.tasks {
-    flex: 3;
-    display: flex;
-    align-items: center;
-}
 
 input#checkbox {
     width: 25%;
