--- a/login_page/style.css
+++ b/login_page/style.css
@@ -72,6 +72,10 @@
     border-radius: 5px;
     cursor: pointer;
 }
+.webNav{
+    flex: 1;
+    background-color: wheat;
+}
 /*--Description page--*/
 
 .description {
