--- a/server_csv/public/src/css/index.css
+++ b/server_csv/public/src/css/index.css
@@ -335,9 +335,23 @@ input#checkbox {
     .loginbg {
         flex: 1;
     }
-    .partthree nav {
+
+    #calendar {
+        height: 45vh;
+    }
+
+    .partthree .fas{
         display: none;
     }
+
+    .partthree .nav-link {
+        display: none;
+    }
+
+    .partthree .navbar {
+        height: 56px;
+    }
+
     .login {
         width: 70%;
         height: 80%;
@@ -365,9 +379,7 @@ input#checkbox {
         display: flex;
         justify-content: center;
     }
-    #calendar{
-        height: auto;
-    }
+   
     .containerbg {
         display: flex;
         flex-direction: column;
@@ -387,9 +399,15 @@ input#checkbox {
         display: flex;
         flex-direction: column;
         flex: 2;
+        height: 100vh;
     }
     
-    .partthree{
-        height: 100%;
+
+    /* .homepage button {
+        display: none;
+    } */
+
+    .userpage {
+        display: none;
     }
 }
