--- a/src/css/index.css
+++ b/src/css/index.css
@@ -93,35 +93,10 @@
     top: 1px;
 }
 
-
-.return-deescription span {
-    color: #5e5e5e!important;
-    font-family: IBM Plex Sans!important;
-    font-size: 20px;
-    margin-left: 16px;
-}
-
-.title-description span {
-    width: 375px;
-    font-weight: bold;
-    margin: 5px;
-    display: flex;
-    justify-content: center!important;
-    font-family: IBM Plex Sans!important;
-    border-bottom: groove #5e5e5e!important;
-}
-
-.description-form {
-    padding-left: 15px!important;
-    font-family: IBM Plex Sans!important;
-}
-
 .media {
     display: flex;
     margin: 13px;
-    background: linear-gradient(
-90deg
-, #dadada, transparent);
+    background: linear-gradient(90deg, #dadada, transparent);
     height: 85px;
     border-radius: 20px;
 }
@@ -166,9 +141,33 @@
 .d-flex {
     margin-top: 20px;
 }
-
 /*--Description page--*/
 
+.title-description span {
+    width: 375px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center!important;
+    font-family: IBM Plex Sans!important;
+    border-bottom: groove #5e5e5e!important;
+}
+
+.description-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
+    display: flex;
+    justify-content: center;
+}
+
+.description-form textarea{
+    width: 80%;
+    height: 50px;
+    padding: 0px;
+    font-family: IBM Plex Sans;
+    cursor: pointer;
+    border-width: 0px;
+}
 .return-deescription{
     margin: 10px;
     height: 18.88px;
@@ -197,15 +196,20 @@
     border-bottom: groove #5e5e5e
 }
 
-.description-form {
-    padding: 10px;
-    font-family: IBM Plex Sans!important;
+.description-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-.description-control {
-    width: 100%;
-    height: 200px;
-}
 
 .assign-to{
     margin: 0px 0px 20px 20px;
@@ -225,7 +229,6 @@
 .assign-to a .fa-user-plus::before {
     font-size: 15px;
     color:#5e5e5e;
-    opacity: 0.5;
     margin-left: 5px;   
 }
 
@@ -233,6 +236,256 @@
     margin: 0px 0px 20px 20px;
     
 }
+
+.descriptionpopup{
+    background-color: rgba(255, 255, 255, 0.699);
+}
+
+.descriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.descriptionPopup{
+    background-color: white;
+    opacity: 0.95;
+    
+}
+
+.descriptionPopup-wrapper button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+    
+}
+
+.descriptionPopup-wrapper #Confirm{
+background-color: rgb(8, 85, 230);
+}
+
+.descriptionPopup-wrapper #Cancel{
+background-color: rgb(8, 148, 104);
+}
+
+.descriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/*--Description page--*/
+
+/*--Add On Description page--*/
+
+.addonTitle-description span {
+    width: 375px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center!important;
+    font-family: IBM Plex Sans!important;
+    border-bottom: groove #5e5e5e!important;
+}
+
+.addonDescription-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
+    display: flex;
+    justify-content: center;
+}
+
+.addonDescription-form textarea{
+    width: 80%;
+    height: 50px;
+    padding: 0px;
+    font-family: IBM Plex Sans;
+    cursor: pointer;
+    border-width: 0px;
+}
+/* .return-deescription{
+    margin: 10px;
+    height: 18.88px;
+    width: auto;
+}
+
+.arrow-left-deescription a{
+    color:#5e5e5e!important;
+}
+
+.return-deescription span{
+    color: #000000!important;
+    font-family: IBM Plex Sans!important;
+    font-size: 20px;
+    margin-left: 16px;
+} */
+
+.addonTitle-description span{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-family: IBM Plex Sans;
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    border-bottom: groove #5e5e5e
+}
+
+.addonDescription-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+.addonAssign-to{
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.addonAssign-to h2 {
+    margin-bottom: 20px;
+}
+
+.addonAssign-to a .fa-user-circle::before {
+    font-size: 30px;
+    color: #5e5e5e;
+    opacity: 0.8;
+}
+
+.addonAssign-to a .fa-user-plus::before {
+    font-size: 15px;
+    color:#5e5e5e;
+    margin-left: 5px;   
+}
+
+.addonDue-date {
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.addonDescriptionpopup{
+    background-color: rgba(255, 255, 255, 0.699);
+}
+
+.addonDescriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.addonDescriptionPopup{
+    background-color: white;
+    opacity: 0.95;
+    
+}
+
+.addonDescriptionPopup-wrapper button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+    
+}
+
+.addonDescriptionPopup-wrapper #Confirm{
+background-color: rgb(8, 85, 230);
+}
+
+.addonDescriptionPopup-wrapper #Cancel{
+background-color: rgb(8, 148, 104);
+}
+
+.addonDescriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/*--Add On Description page--*/
+
+/*---popup html---*/
+
+.popup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.hide{
+    display: none;
+}
+
+.popup{
+    text-align: center;
+    background-color: white;
+    opacity: 0.85;
+}
+
+button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+}
+
+#popupConfirm{
+background-color: rgb(8, 85, 230);
+}
+
+#popupCancel{
+background-color: rgb(8, 148, 104);
+}
+
+.popup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*---popup html---*/
 
 /*---User page---*/
 
@@ -314,3 +567,70 @@ input#checkbox {
     width: 25%;
     height: 25%;
 }
+
+
+/*---search bar---*/
+.searchbarpopup{
+    text-align: center;
+    background-color: white;
+    opacity: 0.85;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+}
+
+.searchbarpopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.hide{
+    display: none;
+}
+
+.searchbarpop-content{
+    box-sizing: border-box;
+}
+      
+#searchbar {
+background-image: url('/css/searchicon.png');
+background-position: 10px 12px;
+background-repeat: no-repeat;
+width: 100%;
+font-size: 16px;
+padding: 12px 20px 12px 40px;
+border: 1px solid #ddd;
+margin-bottom: 12px;
+}
+      
+#myUL {
+list-style-type: none;
+padding: 0;
+margin: 0;
+}
+      
+#myUL li a {
+border: 1px solid #ddd;
+margin-top: -1px; 
+background-color: #f6f6f6;
+padding: 12px;
+text-decoration: none;
+font-size: 18px;
+color: black;
+display: block
+}
+      
+#myUL li a:hover:not(.header) {
+background-color: #eee;
+}
+
+
+/* popup */
