--- a/server_csv/public/src/css/index.css
+++ b/server_csv/public/src/css/index.css
@@ -399,7 +399,7 @@ input#checkbox {
     }
 
     .nav-link {
-        font-size: 20px;
+        font-size: 30px;
         color: black;
         font-weight: bold;
     }
@@ -510,5 +510,9 @@ input#checkbox {
         color: black;
         content: "\f2f5";
         font-size: 30px;
+    }
+
+    .user_page {
+        display: none;
     }
 }
