--- a/server_csv/public/src/css/index.css
+++ b/server_csv/public/src/css/index.css
@@ -210,8 +210,9 @@
 }
 
 
-/*--Description page--*/
 
+/*--Description page--*/
+/* 
 .return-deescription {
     margin: 10px;
     height: 18.88px;
@@ -273,7 +274,371 @@
 
 .due-date {
     margin: 0px 0px 20px 20px;
+} */
+
+
+.title-description span {
+    width: 375px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center!important;
+    font-family: IBM Plex Sans!important;
+    border-bottom: groove #5e5e5e!important; 
 }
+
+.description-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
+    display: flex;
+    justify-content: center;
+}
+
+/* .project-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
+    display: flex;
+    justify-content: center;
+} */
+
+/* .description-form textarea{
+    width: 80%;
+    height: 50px;
+    padding: 0px;
+    font-family: IBM Plex Sans;
+    cursor: pointer;
+    border-width: 0px;
+} */
+
+.return-deescription{
+    margin: 10px;
+    height: 18.88px;
+    width: auto;
+}
+
+.arrow-left-deescription a{
+    color:#5e5e5e!important;
+}
+
+.return-deescription span{
+    color: #000000!important;
+    font-family: IBM Plex Sans!important;
+    font-size: 20px;
+    margin-left: 16px;
+}
+
+.title-description span{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-family: IBM Plex Sans;
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    border-bottom: groove #5e5e5e
+}
+.project-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.description-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+.assign-to{
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.assign-to h2 {
+    margin-bottom: 20px;
+}
+
+.assign-to a .fa-user-circle::before {
+    font-size: 30px;
+    color: #5e5e5e;
+    opacity: 0.8;
+}
+
+.assign-to a .fa-user-plus::before {
+    font-size: 15px;
+    color:#5e5e5e;
+    margin-left: 5px;   
+}
+
+.due-date {
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.descriptionpopup{
+    background-color: rgba(255, 255, 255, 0.699);
+}
+
+.descriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.descriptionPopup{
+    background-color: white;
+    opacity: 0.95;
+    
+}
+
+.descriptionPopup-wrapper button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+    
+}
+
+.descriptionPopup-wrapper #Confirm{
+background-color: rgb(8, 85, 230);
+}
+
+.descriptionPopup-wrapper #Cancel{
+background-color: rgb(8, 148, 104);
+}
+
+.descriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/*--Add On Description page--*/
+
+.addonTitle-description span {
+    width: 375px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center!important;
+    font-family: IBM Plex Sans!important;
+    border-bottom: groove #5e5e5e!important;
+}
+
+.addonDescription-form {
+    padding-left: 15px!important;
+    font-family: IBM Plex Sans!important;
+    display: flex;
+    justify-content: center;
+}
+
+.addonDescription-form textarea{
+    width: 80%;
+    height: 50px;
+    padding: 0px;
+    font-family: IBM Plex Sans;
+    cursor: pointer;
+    border-width: 0px;
+}
+/* .return-deescription{
+    margin: 10px;
+    height: 18.88px;
+    width: auto;
+}
+
+.arrow-left-deescription a{
+    color:#5e5e5e!important;
+}
+
+.return-deescription span{
+    color: #000000!important;
+    font-family: IBM Plex Sans!important;
+    font-size: 20px;
+    margin-left: 16px;
+} */
+
+.addonTitle-description span{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-family: IBM Plex Sans;
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    border-bottom: groove #5e5e5e
+}
+
+.addonDescription-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+.addonAssign-to{
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.addonAssign-to h2 {
+    margin-bottom: 20px;
+}
+
+.addonAssign-to a .fa-user-circle::before {
+    font-size: 30px;
+    color: #5e5e5e;
+    opacity: 0.8;
+}
+
+.addonAssign-to a .fa-user-plus::before {
+    font-size: 15px;
+    color:#5e5e5e;
+    margin-left: 5px;   
+}
+
+.addonDue-date {
+    margin: 0px 0px 20px 20px;
+    
+}
+
+.addonDescriptionpopup{
+    background-color: rgba(255, 255, 255, 0.699);
+}
+
+.addonDescriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.addonDescriptionPopup{
+    background-color: white;
+    opacity: 0.95;
+    
+}
+
+.addonDescriptionPopup-wrapper button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+    
+}
+
+.addonDescriptionPopup-wrapper #addonConfirm{
+background-color: rgb(8, 85, 230);
+}
+
+.addonDescriptionPopup-wrapper #addonCancel{
+background-color: rgb(8, 148, 104);
+}
+
+.addonDescriptionPopup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/*--Add On Description page--*/
+
+/*---popup html---*/
+
+.popup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.hide{
+    display: none;
+}
+
+.popup{
+    text-align: center;
+    background-color: white;
+    opacity: 0.85;
+}
+
+button{
+    font-size: 24px;
+    color: cornsilk;
+    margin: 60px 25px;
+    background: rgb(8, 85, 230);
+    border: 0px;
+    padding: 14px 25px;
+    border-radius: 10px;
+}
+
+#popupConfirm{
+background-color: rgb(8, 85, 230);
+}
+
+#popupCancel{
+background-color: rgb(8, 148, 104);
+}
+
+.popup-wrapper{
+    background: rgba(0, 0, 0 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*---popup html---*/
 
 
 /*---User page---*/
