--- a/server_csv/public/Description_page/Css/style.css
+++ b/server_csv/public/Description_page/Css/style.css
@@ -236,6 +236,7 @@
 .assign-to{
     margin: 0px 0px 20px 20px;
     font-family: Alumni Sans;
+    height: 85px
 }
 
 .assign-to h2 {
@@ -256,7 +257,7 @@
 
 .due-date{
     font-family: Alumni Sans;
-    margin: 0px 0px 20px 20px;
+    margin: 20px 0px 0px 20px;
 }
 
 .descriptionPopup{
@@ -422,6 +423,7 @@ font-family: Alumni Sans;
 .addonAssign-to{
     margin: 0px 0px 20px 20px;
     font-family: Alumni Sans;
+    height: 85px;
 }
 
 .addonAssign-to h2 {
@@ -441,7 +443,7 @@ font-family: Alumni Sans;
 }
 
 .addonDue-date {
-    margin: 0px 0px 20px 20px;
+    margin: 20px 0px 0px 20px;
     font-family: Alumni Sans;
 }
 
@@ -500,6 +502,7 @@ font-family: Alumni Sans;
 
 .pop-content{
     font-family: Alumni Sans;
+    width: 409px;
 }
 
 .popup-wrapper{
