--- a/server_csv/public/Description_page/Css/style.css
+++ b/server_csv/public/Description_page/Css/style.css
@@ -4,54 +4,86 @@
     font-family: Alumni Sans;
 }
 
-/* .banner{
+
+.wrapper {
     width: 100%;
     height: 300px;
+    border-radius: 10px;
+    /* box-shadow: 0 2px 30px rgba(0, 0, 0, 0.2); */
+    background: #fff;
     position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+  }
+  
+  .title {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    line-height: 300px;
+    text-align: center;
+    color: white;
+    font-family: serif;
+    font-size: 30px;
+  }
 
+  .wave {
+    background: #6a82fb;
+    width: 500px;
+    height: 500px;
+    border-radius: 40%;
+    opacity: 0.4;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    margin-left: -250px;
+    margin-top: -250px;
+    transform-origin: center;
+    animation: drift 7s infinite linear;
+  }
+
+  .wave.two {
+    animation: drift 9s infinite linear;
+  }
+
+  .wave.three {
+    animation: drift 11s infinite linear;
+    opacity: 0.1;
+  }
+
+  @keyframes drift {
+    0 {
+      transform: rotate(0deg);
     }
-    .wave{
-        background-color: #b1d5f3;
-        width: 200vw;
-        height: 200vh;
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
-} */
-.wave {
+
+  .wrapper:after {
+    content: "";
+    display: block;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    background: blue;
-}
-
-.wave {
-    width: 200vw;
-    height: 200vh;
-    border-top-right-radius: 150px;
-    border-top-left-radius: 150px;
-    border-bottom-right-radius: 150px;
-    border-bottom-left-radius: 140px;
-    background: #adcbfe;
-}
-.wave {
-    width: 200vw;
-    height: 200vh;
-    border-top-right-radius: 150px;
-    border-top-left-radius: 150px;
-    border-bottom-right-radius: 150px;
-    border-bottom-left-radius: 140px;
-    background: #adcbfe;
-    animation: wave 4s linear infinite;
-}
-
-@keyframes wave {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
-}
+    background: linear-gradient(
+      to bottom,
+      #88c3e6,
+      rgba(238, 221, 255, 0) 80%,
+      rgba(255, 255, 255, 0.5) 100%
+    );
+    z-index: 11;
+    transform: translate3d(0, 0, 0);
+  }
 
 .mediaNav {
     background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 625px;
+    
     display: flex;
     flex-direction: column;
     color: rgb(68, 68, 68);
