--- a/Project/src/page/home/Home.module.css
+++ b/Project/src/page/home/Home.module.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cookie&family=Vollkorn:wght@500&display=swap");
 * {
+  /* font-family: "montserrat", Arial, Helvetica, sans-serif; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -70,7 +71,7 @@
   position: relative;
   width: 60px;
   height: 60px;
-  background: url(https://i.ibb.co/HrfVRcx/menu.png);
+  background: url(https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: center;
@@ -128,6 +129,7 @@
   }
 }
 .text a {
+  font-family: "montserrat", Arial, Helvetica, sans-serif;
   display: inline-block;
   padding: 12px 36px;
   margin: 10px 0;
