--- a/Project/src/page/todo/Todo.css
+++ b/Project/src/page/todo/Todo.css
@@ -26,6 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 30px;
 }
 .header h1 {
   text-align: center;
@@ -60,7 +61,9 @@
   max-height: 30px;
   align-items: center;
 }
-
+.todoButton {
+  display: flex;
+}
 .buttonComplete,
 .buttonDelete,
 .buttonEdit {
@@ -74,17 +77,25 @@
   padding: 0;
 }
 
-.buttonComplete {
-  color: rgb(112, 190, 214);
+.iconButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+}
+
+.buttonComplete path {
+  fill: rgb(0 131 171);
   margin-right: 10px;
 }
 
-.buttonEdit {
-  color: rgb(115, 98, 177);
+.buttonEdit path {
+  fill: rgb(49 21 150);
   margin-right: 10px;
 }
-.buttonDelete {
-  color: rgb(212, 133, 186);
+.buttonDelete path {
+  fill: rgb(181 72 145);
 }
 .complete {
   text-decoration-style: solid;
