--- a/Project/src/page/todo/Todo.css
+++ b/Project/src/page/todo/Todo.css
@@ -41,6 +41,7 @@
   background-color: rgb(255, 255, 255, 0.7);
   border: black;
   border-radius: 10px;
+  height: 50px;
 }
 .buttonAdd {
   width: 70px;
